cmake_minimum_required(VERSION 3.22)
project(jelena)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(FETCHCONTENT_QUIET off)
set(CMAKE_EXE_LINKER_FLAGS
    "${CMAKE_EXE_LINKER_FLAGS} -Wl,--whole-archive -Wl,--no-whole-archive")
add_compile_options(-Wall -Wextra -Wpedantic)

option(FULL_BENCHMARK "Execute the full benchmarks" ON)

if(FULL_BENCHMARK)
  message(STATUS "Compiling full benchmarks")
  add_definitions(-DFULL_BENCHMARK)
endif()

# Include google test
include(FetchContent)
include(GoogleTest)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)

# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt
    ON
    CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)
enable_testing()

add_subdirectory(src)
add_subdirectory(test)
add_subdirectory(benchmark)
